@@ -30,6 +30,7 @@ version 2.0-rc0 XX-Feb-2012
 . [FIX] GLProgram: report error correctly if vertex shader has compile issues
 . [FIX] GLView: Fixed memory leak while dispatching events (Mac only)
 . [FIX] GLView: MSAA support is working (issue #1315)
+. [FIX] Node: visible is bool (and not BOOL) to prevent signed issues (issue #1314)
 . [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
 . [FIX] Progress: works with rotated sprite frames (issue #1303)
 . [FIX] Sprite: adding family of sprites to a batchnode works as expected (issue #1217)
